<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">慢聊</string>
    <string name="NameofPlayer">Name:SillyB</string>
    <string name="IdofPlayer">Id:1204995349</string>
    <string name="MottoofPlayer">座右铭：啊啊啊啊啊啊啊啊啊</string>
    <string name="Adress">地址：中国广东省广州市番禺区华南理工大学（大学城校区）C12&#8211;340</string>
    <string name="RegisterActivityTitle">注册界面</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserAccountHint">请输入账号</string>
    <string name="PassWordHint">请输入密码</string>
    <string name="DengLu">登    陆</string>
    <string name="IfSavePassWord">保存密码？</string>
    <string name="register">注册慢信账号</string>
    <string name="RegisterUserId">注册手机号码</string>
    <string name="RegisterUserName">注册昵称</string>
    <string name="RegisterPassWord">输入6位数密码</string>
    <string name="ConfirmPassWord">确认密码</string>
    <string name="RegisterUserPostcode">输入邮编</string>
    <string name="RegisterUserAddress">输入地址</string>
    <string name="Register">注  册</string>
    <string name="Back">返回</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_function">FunctionActivity</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_personal_settings">PersonalSettings</string>
    <string name="title_activity_person__info">Person_Info</string>
    <string name="Back_personalinfo">&#060;返回</string>
    <string name="title_activity_send_mail">SendMailActivity</string>
    <string name="addressee">收件人：</string>
    <string name="title_activity_mail_box">MailBoxActivity</string>
    <string name="title_activity_user_name_card">UserNameCard</string>
    <string name="title_activity_user_card">UserCard</string>
    <string name="title_activity_user_info">UserInfo</string>
    <string name="title_activity_person_detial">PersonDetial</string>
    <string name="title_activity_person_detail">PersonDetail</string>
    <string name="title_activity_welcome">Welcome</string>

</resources>