<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:gravity="center_horizontal"
    android:orientation="horizontal"
    android:weightSum="3"
    tools:context="com.Activity.LogInActivity" >
 

    <LinearLayout
        android:id="@+id/LogoLinear"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/UserAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UserAccountHint"
            android:textSize="@dimen/small" />

        <EditText
            android:id="@+id/PassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PassWordHint"
            android:textSize="@dimen/small" />

        <Button
            android:id="@+id/LogIn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/DengLu"
            android:textSize="@dimen/small" />

        <LinearLayout
            android:id="@+id/LogoLinear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:textSize="@dimen/tiny" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>